--- a/src/assets/css/CustomerDetails.css
+++ b/src/assets/css/CustomerDetails.css
@@ -26,7 +26,7 @@
 .welcomeText{
     justify-content: center;
     color:#04AA6D;
-    font-Family:fantasy;
+    font-Family:fanasy;
     font-Stretch:expanded;
     font-Size:60px;
     font-Style:bold;
